--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "vite-plugin-react-remove-attributes": "^1.0.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -34,9 +35,9 @@
     "jest-environment-jsdom": "^29.3.1",
     "laravel-vite-plugin": "^0.7.1",
     "sass": "^1.56.1",
+    "tailwindcss": "^3.3.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.6.4",
-    "vite": "^3.2.7r",
-    "vite-plugin-react-remove-attributes": "^1.0.3"
+    "vite": "^3.2.7"
   }
 }
